--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "userscript-template",
+  "name": "satisfactorytools-helper",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "watch": "nodemon",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -11,6 +12,7 @@
   "devDependencies": {
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "nodemon": "^3.1.10",
     "typescript": "^5.5.4",
     "vite": "^5.3.4",
     "vite-plugin-monkey": "^4.0.6"
